examples/tests/typed_controlflow_errors.ore
/*
    Stage E.3.5a — error cases for control flow + assign + array literal.
    Each case below should produce exactly one diagnostic.
*/

// error: return value type doesn't match fn signature
ret_mismatch :: fn() i32
    return true

// error: return without a value in fn returning <non-void>
empty_return :: fn() i32
    return

// error: array literal element type mismatch (string into i32)
bad_array_lit :: fn() [3]i32
    [3]i32{ 1, "hi", 3 }

// error: array literal count mismatch
wrong_count :: fn() [4]i32
    [4]i32{ 1, 2, 3 }

// error: no field 'foo' on slice
bad_slice_field :: fn(s: []i32) i32
    s.foo

// error: no field 'ptr' on array (only 'len' is valid)
bad_array_ptr :: fn(arr: [3]i32) ^i32
    arr.ptr
